--- a/fetusapp/templates/patients.html
+++ b/fetusapp/templates/patients.html
@@ -81,7 +81,7 @@
                     <div class="wrapper">
                         <div class="form-wrapper patient-lite px-3">
                             <form id="createPatientForm" onsubmit="handleCreatePatient(event)">
-                                <h2 class="text-center">Create new patient</h2>
+                                <h2 class="text-center">Νέος Πελάτης</h2>
                                 <div class="input-group">
                                     <input type="text" name="first_name" id="" required>
                                     <label for="first_name">Όνομα</label>
