--- a/fetusapp/templates/patient.html
+++ b/fetusapp/templates/patient.html
@@ -136,18 +136,25 @@
                                     </div>
 
 
-                                    <div class="editable" id="editableContentCD" style="display: none;">
-                                        <form>
-                                            <div class="mb-3">
-                                                <label for="nameInput" class="form-label">Σταθερό Τηλ:</label>
-                                                <input type="text" class="form-control" id="nameInput" placeholder="210xxxxxxx" value="{{patient.home_phone}}">
+                                    <div class="editable card card-cover overflow-hidden text-bg-dark rounded-4 shadow-lg" id="editableContentCD" style="display: none;">
+                                        <div class="d-flex flex-column h-100 p-3 text-shadow-1">  
+                                            <div class="wrapper">
+                                                <div class="form-wrapper patient-lite px-3">
+                                                    <form>
+                                                        <h2 class="text-center">Στοιχεία Επικοινωνίας</h2>
+                                                        <div class="input-group">
+                                                            <input type="text" id="mobile_phoneInput" value="{{patient.mobile_phone}}">
+                                                            <label for="mobile_phoneInput" class="form-label">Κινητό Τηλ:</label>
+                                                        </div>
+                                                        <div class="input-group">
+                                                            <input type="email" id="emailInput" placeholder="john.doe@example.com" value="{{patient.email}}">
+                                                            <label for="emailInput" class="form-label">Ε-mail:</label>
+                                                        </div>
+                                                        <button type="button" class="btn login-btn" onclick="saveChangesContactDetails()">Save</button>
+                                                    </form>
+                                                </div>
                                             </div>
-                                            <div class="mb-3">
-                                                <label for="emailInput" class="form-label">Ε-mail:</label>
-                                                <input type="email" class="form-control" id="emailInput" placeholder="john.doe@example.com" value="{{patient.email}}">
-                                            </div>
-                                            <button type="button" class="btn login-btn" onclick="saveChangesContactDetails()">Save</button>
-                                        </form>
+                                        </div>  
                                     </div>
 
 
