remove margins from edit

--- a/fetusapp/templates/patient.html
+++ b/fetusapp/templates/patient.html
@@ -28,7 +28,7 @@
 
                             <!-- New content with slider card -->
                             <div class="container px-0 ">
-                                <div class="form-container my-4" style="position: relative; transition: max-height 0.2s ease-in-out;" id="formContainerPersonalDetails">
+                                <div class="form-container my-2" style="position: relative; transition: max-height 0.2s ease-in-out;" id="formContainerPersonalDetails">
 
                                     <div class="read-only read-only-labels" id="readOnlyContentPD">
                                         <h3 class="text-center">Προσωπικά Στοιχεία</h3>
@@ -95,14 +95,14 @@
                 <!-- Section with contact details -->
                 <div class="col-12 col-lg-6 text-light">
                     <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg bg-dark">
-                        <div class="d-flex flex-column h-100 p-4 text-shadow-1">
+                        <div class="d-flex flex-column h-100 text-shadow-1">
 
                             <!-- New content with slider card -->
                             <div class="container px-0 ">
-                                <div class="form-container my-4" style="position: relative; transition: max-height 0.2s ease-in-out;" id="formContainerContactDetails">
+                                <div class="form-container" style="position: relative; transition: max-height 0.2s ease-in-out;" id="formContainerContactDetails">
 
-                                    <div class="read-only read-only-labels" id="readOnlyContentCD">
-                                        <h3 class="text-center">Στοιχεία Επικοινωνίας</h3>
+                                    <div class="read-only read-only-labels p-4" id="readOnlyContentCD">
+                                        <h3 class="text-center mt-2">Στοιχεία Επικοινωνίας</h3>
 
                                         {% macro display_field(field_name, field_config, value) %}
                                             {% if value %}
@@ -116,14 +116,14 @@
                                             {% endfor %}
                                         </p>
 
-                                        <button class="btn btn-outline-secondary" onclick="toggleEditModeContactDetails()">Update</button>
+                                        <button class="btn btn-outline-secondary mb-2" onclick="toggleEditModeContactDetails()">Update</button>
                                     </div>
 
 
                                     <div class="editable card card-cover overflow-hidden text-bg-dark rounded-4 shadow-lg" id="editableContentCD" style="display: none;">
                                         <div class="d-flex flex-column h-100 p-3 text-shadow-1">  
                                             <div class="wrapper">
-                                                <div class="form-wrapper patient-lite px-3">
+                                                <div class="form-wrapper patient-lite px-2">
 
                                                     {% macro input_group(field_name, field_config, value) %}
                                                     <div class="input-group">
@@ -136,12 +136,12 @@
                                                     {% endmacro %}
 
                                                     <form>
-                                                        <h2 class="text-center">Στοιχεία Επικοινωνίας</h2>
+                                                        <h2 class="text-center mt-2">Στοιχεία Επικοινωνίας</h2>
                                                         {% for field_name, field_config in contact_fields.items() %}
                                                             {{ input_group(field_name, field_config, getattr(patient, field_name)) }}
                                                         {% endfor %}
-                                                        <button type="button" class="btn login-btn" onclick="saveChangesContactDetails()">Save</button>
-                                                        <button type="button" class="btn btn-outline-light" onclick="cancelChangesContactDetails()">Cancel</button>
+                                                        <button type="button" class="btn login-btn mb-2" onclick="saveChangesContactDetails()">Save</button>
+                                                        <button type="button" class="btn btn-outline-light mb-2" onclick="cancelChangesContactDetails()">Cancel</button>
                                                     </form>
                                                 </div>
                                             </div>
