add personal data fields

--- a/fetusapp/static/style.css
+++ b/fetusapp/static/style.css
@@ -328,7 +328,8 @@ em {
 #pills-register,
 #pills-delete,
 #pills-update,
-#editableContentCD {
+#editableContentCD,
+#editableContentPD {
     background: var(--warm-beige);
     color: black;
     border: none;
